fixed position for project elements on mobile

--- a/projectStyle.css
+++ b/projectStyle.css
@@ -80,7 +80,7 @@
     }
 
     .projectEle {
-        margin-left: 4em;
+        margin-left: 6em;
     } 
 }
 
